# SkyScope-backend

./: Cargo.toml  README.md
src/: cors.rs  main.rs
src/routes/: image_routes.rs  label_routes.rs  mod.rs  object_routes.rs
src/structs/: image.rs
