[package]
name = "skyscope-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.35"
dotenv = "0.15.0"
multer = "2.0.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
